<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFormISBNBuku" />

        <EditText
            android:id="@+id/txtFormISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFormJudulBuku" />

        <EditText
            android:id="@+id/txtFormJudulBuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFormPenulis" />

        <EditText
            android:id="@+id/txtFormNamaPenulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btnFormBatal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFormBatal" />

            <Button
                android:id="@+id/btnFormSimpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFormSimpan" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>